# dublaj

./: .gitignore  Dockerfile  README.md  create.sh  output.yml  output_advanced.jsonl  output_final_solution.jsonl  pipeline_summary.json  pyproject.toml  pyproject.toml.broken  segments.json  step1_vad.json  step2_osd.json  step3_diarization.json  step4_asr.json  step5_final.json  wordsw.jsonl
_temp_app/: out.jsonl  step1_vad.json  step3_diarization.json  step4_asr_meta.json
configs/: cloud_run_env  nemo_msdd_telephony.yaml
core/io/: audio.py
core/metrics/: __init__.py
core/pipeline/: base.py  timeline.py
core/registry/: base.py  lipsync.py  translator.py  tts.py
dubbing_ai/: artifact_types.py
dubbing_ai/diarizer/: __init__.py  nemo_msdd_diarizer.py  pyannote_diarizer.py
dubbing_ai/edl/: generate_edl.py
dubbing_ai/tests/: test_assign_words.py
dubbing_ai/utils/: audio.py  rttm.py
dubbing_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mini-app/: a.patch  mp4_diarize_pipeline.py  professional-speaker-mapper.py  pyproject.toml  run_pipeline.py  run_quick_test.py  segment_problem.py  speaker_segment_analyzer.py  surgical_fix.sh  sync_drift_analysis.md  sync_monitor.py  test_claude.py  test_concatenation.py  test_integration.py  test_minimal.py  test_overlap_fix.py  test_overlap_results.json  test_segments.json  test_speaker_pipeline.py  test_sync_report.json  test_sync_simple.py  test_sync_solution.py  voiceprocess-58fbc-8e5f0264cdc0.json  voiceprocess-58fbc-b17f567c5826.json  xtts.py
mini-app/core/io/: demucs.py  downloader.py
mini-app/core/metrics/: io.py  schema.py
mini-app/core/pipeline/: runner.py
mini-app/core/registry/: asr.py
mini-app/models/asr/: dummy.py  whisper.py
mini-app/models/lipsync/: __init__.py  base.py  simple.py  wav2lip.py
mini-app/models/translator/: __init__.py  advanced.py  google_cloud.py  nllb.py  opus_mt.py
mini-app/models/tts/: __init__.py  cosyvoice3.py  gtts.py  xtts.py
mini-app/output2/: sample2.debug.json  sample2.mono1_16kHz_64kbps.mono16k.diarization.rttm  sample2.segments.csv  sample2.segments.srt  sample2.speakers.csv  sample2.timeline.csv  sample2.verbose.json  sample2.words.csv
mini-app/output2/_work/: sample2.mono1_16kHz_64kbps.m4a
mini-app/steps/: asr.py  build_ref_voices.py  detayli_arastirma.py  diarize.py  download.py  extract_audio.py  lipsync.py  mix.py  mix_audio.py  translate.py  tts.py  voice_separation.py
pipeline/: README.md  a.jsonF  b.jsonF  full-pipeline.py  output_speechbrain.jsonl  pyproject.toml
pipeline/pretrained_models/sbk_ecapa_runtime/: embedding_model.ckpt  hyperparams.yaml
pipeline/pretrained_models/sepformer/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
pipeline/pretrained_models/spkrec/: label_encoder.ckpt
pipeline/pretrained_models/vad/: hyperparams.yaml  mean_var_norm.ckpt  model.ckpt
pretrained_models/sepformer/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  mean_var_norm_emb.ckpt
pyannote/: advanced_diarization_pipeline.py  app-full.py  app-json-merger.py  app-pipeline.py  app.py  assign_speakers_to_segments.py  out_words.jsonl  overlap_diarize_and_fuse.py  pipeline_monolith.py  pyproject.toml  reassign_speakers.py  run-pipeline.py  run_pipeline_sh.sh  segments.json  step3_diarization.json  t.txt  unified_pipeline.py  whisperx_unified.py
pyannote/_temp/: out.jsonl  pipeline_summary.json  step1_vad.json  step2_5_overlap_gated.json  step2_osd.json  step3_diarization.json  step4_asr.json  step5_final.json
pyannote/core/io/: downloader.py
pyannote/core/pipeline/: runner.py
pyannote/core/registry/: lipsync.py  translator.py
pyannote/step/: __init__ .py  app_full_core_step.py  build_ref_voices_step.py  merge_sentences_step.py  sentence_translation_step.py  utils.py  xtts_per_segment_step.py
try/: .env.example  .gitignore  README.md  audio_detailed.rttm  requirements.txt  run_enhanced.sh  transcription.json
try/configs/: config.json
try/src/: diar.py  enhanced_asr_diarization.py  fun-pipeline.py  nemo.py  pipeline.py  test_enhanced.py  utils.py
