[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubbing_ai"
version = "0.1.0"
description = "Dubbing / ASR + diarization utilities"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "VoiceProcess", email = "dev@voiceprocess.io" }]
license = { text = "Proprietary" }
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dubbing_ai*"]

