[tool.poetry]
name = "dublaj-pipeline"
version = "0.1.0"
description = "Complete dubbing pipeline with VAD, OSD, diarization, ASR, and TTS"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# Pyannote audio for diarization - CORRECT PACKAGE NAME WITH QUOTES
"pyannote.audio" = "^3.1.1"
"pyannote.core" = "^5.0.0"
"pyannote.database" = "^5.0.1"
"pyannote.pipeline" = "^3.0.1"
"pyannote.metrics" = "^3.2.1"

# ASR
faster-whisper = "^1.0.3"

# Audio processing
soundfile = "^0.12.1"
librosa = "^0.10.1"
pydub = "^0.25.1"
pyloudnorm = "^0.1.1"

# Basic dependencies
numpy = ">=1.22.0,<1.27.0"
scipy = "^1.11.0"
pandas = "^2.1.0"

# Video processing
ffmpeg-python = "^0.2.0"

# Download tools
yt-dlp = "^2024.1.0"

# Utils
tqdm = "^4.66.0"
requests = "^2.31.0"
typing-extensions = "^4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
