[tool.poetry]
name = "advanced-diarization"
version = "2.0.0"
description = "Advanced Speaker Diarization Pipeline with PyAnnote + WhisperX"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
torchaudio = ">=2.0.0"

# PyAnnote.audio 3.0+ for state-of-the-art diarization
pyannote-audio = ">=3.1.0"
pyannote-core = ">=5.0.0"
pyannote-database = ">=5.0.0"
pyannote-metrics = ">=3.2.0"
pyannote-pipeline = ">=3.0.0"

# WhisperX for transcription
whisperx = {git = "https://github.com/m-bain/whisperx.git"}
faster-whisper = ">=1.0.0"

# Required for alignment
phonemizer = ">=3.2.0"

# Audio processing
librosa = ">=0.10.0"
soundfile = ">=0.12.0"
pydub = ">=0.25.1"

# Machine learning
scikit-learn = ">=1.3.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"

# Utils
tqdm = ">=4.65.0"
pandas = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"