[tool.poetry]
name = "dublaj-pipeline"
version = "0.1.0"
description = "Complete dubbing pipeline with VAD, OSD, diarization, ASR, and TTS"
authors = ["Fatih"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# PyTorch and torchaudio - REQUIRED for pyannote
torch = ">=2.0.0"
torchaudio = ">=2.0.0"

# Pyannote audio for diarization
"pyannote.audio" = "^3.1.1"
"pyannote.core" = "^5.0.0"
"pyannote.database" = "^5.0.1"
"pyannote.pipeline" = "^3.0.1"
"pyannote.metrics" = "^3.2.1"

# Additional pyannote dependencies
speechbrain = ">=0.5.16"
asteroid-filterbanks = "^0.4.0"
torch-audiomentations = "^0.11.0"
torch-pitch-shift = "^1.2.4"

# ASR
faster-whisper = "^1.0.3"
openai-whisper = "^20231117"  # Opsiyonel, faster-whisper'a alternatif
ctranslate2 = ">=3.20.0"  # faster-whisper için gerekli
tokenizers = ">=0.13.0"

# Hugging Face integration
huggingface-hub = ">=0.16.0"
transformers = ">=4.35.0"
datasets = "^2.14.0"
safetensors = ">=0.3.1"

# Audio processing
soundfile = "^0.12.1"
librosa = "^0.10.1"
pydub = "^0.25.1"
pyloudnorm = "^0.1.1"
audioread = "^3.0.0"
resampy = "^0.4.2"
webrtcvad = "^2.0.10"  # Ek VAD desteği için

# Basic dependencies
numpy = ">=1.22.0,<1.27.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"

# Video processing
ffmpeg-python = "^0.2.0"
opencv-python = "^4.8.0"
moviepy = "^1.0.3"
brouhaha = {git = "https://github.com/marianne-m/brouhaha-vad", branch = "main"}

# Download tools
yt-dlp = "^2024.1.0"
youtube-dl = "^2021.12.17"  # Backup option

# TTS (Text-to-Speech) - Opsiyonel
# coqui-tts = "^0.22.0"  # Açık kaynak TTS
# edge-tts = "^6.1.0"  # Microsoft Edge TTS

# Utils
tqdm = "^4.66.0"
requests = "^2.31.0"
typing-extensions = "^4.9.0"
python-dotenv = "^1.0.0"  # .env dosyası desteği
rich = "^13.7.0"  # Güzel terminal çıktıları
click = "^8.1.0"  # CLI için
pyyaml = "^6.0.0"
jsonlines = "^4.0.0"  # JSONL dosya işleme

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
gpu = ["torch", "torchaudio"]  # GPU desteği için
tts = ["coqui-tts", "edge-tts"]  # TTS özellikleri için

[tool.poetry.scripts]
dublaj = "dublaj.cli:main"  # CLI komutları için

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true